--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function gtag_report_conversion(url) {
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verify Human</title>
+    <title>Verificación Humana</title>
     <style>
         * {
             margin: 0;
